@@ -20,6 +20,9 @@ As a result they are only available to licensed users of StarTeam.  You must hav
 <CODE>starteam-sdk.jar</CODE> in your classpath to run these tasks.
 For more information about the StarTeam API and how to license it, see
 the <a href="http://www.borland.com/starteam/">Borland</a> web site.</p>
+  <p>
+    <em>All the StarTeam task names are in lower case.</em>
+  </p>
 <h3>Important Note on Installation and Licensing:</h3>
 <p>
 <b>On Windows machines, the mere presence of <CODE>starteam-sdk.jar</CODE> on the classpath 
@@ -227,7 +230,7 @@ of checkout.</td>    <td align="center" valign="top">no</td>
               username="auser"
               password="secret"
               rootlocalfolder="C:\dev\buildtest\co"
-              force="true"
+              forced="true"
   /&gt;
 </pre>
 
