@@ -74,7 +74,8 @@ Fixed bugs:
 Other changes:
 --------------
 
-* Docs fixes for xmlvalidate.html, javadoc.html. Bugzilla Report 27092, 27284.
+* Docs fixes for xmlvalidate.html, javadoc.html, starteam.
+  Bugzilla Reports 27092, 27284, 27554.
 
 * <pathconvert> now accepts nested <mapper>s.  Bugzilla Report 26364.
 
